<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Emotional CTRL</string>

   <!--Settings activity title -->
    <string name="action_settings">Settings</string>

    <!--MainActivity title NOT USED -->
    <string name="title_activity_web_view">WebViewActivity</string>

    <!--Preferences labels and keys international -->
    <string name="pref_server_default">localhost</string>
    <string name="pref_server_label">Server</string>
    <string name="pref_port_default"></string>
    <string name="pref_port_label">Port</string>
    <string name="pref_portserver_summ">Select Server and Port</string>
    <string name="pref_portserver_title">Server and Port</string>
    <string name="pref_servers_title">Servers</string>
    <string name="pref_servers_default">Server 1</string>

     <!--Preferences labels and keys UNMUTABLE -->
    <string name="pref_server_key">server</string>
    <string name="pref_port_key">port</string>
    <string name="pref_servers_key">servers</string>

    <!-- Drawer Options-->
    <string name="drawer_settings">Settings</string>
    <string name="drawer_refresh">Refresh</string>
    <string name="drawer_exit">Exit</string>

    <!-- ProgressDialog -->
    <string name="progreesdiag_mess">Please wait, connecting to server...</string>

    <!-- HTML messages -->
    <string name="messages_invalid">Invalid URL</string>
    <string name="message_server1">Unnable to connect to server code 1</string>
    <string name="message_server2">Unnable to connect to server code 2</string>
    <string name="no_connection">Please check Network Settings</string>
    <string name="no_connection_title">No Network Connection</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="accept_button">yes</string>
    <string name="ok">ok</string>
    
    <!--networkchangereceiver values -->
    <string name="activeNetStr">Active Network Type : </string>
    <string name="mobNetStr">Mobile Network Type : </string>


</resources>
