<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/ser_dialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:title="@string/pref_server_label"
        android:key="@string/pref_server_key"
        android:defaultValue="@string/pref_server_default"
        android:inputType="text"
        android:singleLine="true"
        android:hint="Server"
        android:padding="25dp"
        />

    <EditText
        android:id="@+id/port_dialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:title="@string/pref_port_label"
        android:key="@string/pref_port_key"
        android:defaultValue="@string/pref_port_default"
        android:inputType="text"
        android:singleLine="true"
        android:hint="Port"
        android:padding="25dp"
        />

</LinearLayout>